# multi-agent-gtm-crewai-n8n

./: .gitignore  README.md
crewai-gtm/: pyproject.toml
crewai-gtm/src/crewai_gtm/: __init__.py  chatbot.py  crew.py  main.py  run_minimal.py
crewai-gtm/src/crewai_gtm/agents/: __init__.py
crewai-gtm/src/crewai_gtm/config/: agents.yaml  tasks.yaml
crewai-gtm/src/crewai_gtm/outputs/: .gitkeep  evidence.json  gtm_plan_final.md  minimal_run_output.md
crewai-gtm/src/crewai_gtm/tasks/: __init__.py
crewai-gtm/src/crewai_gtm/tools/: __init__.py  docs_tool.py  evidence_tool.py  scrape_tool.py  search_tool.py
crewai-gtm/tests/: test_tools.py
docs/: GTM_Plan_AI_Coding_Tools.md
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.js
mcp-server/src/tools/: docs.js  evidence.js  scrape.js  search.js
n8n-workflow/: gtm-planning-workflow.json
