[project]
name = "crewai-gtm"
version = "1.0.0"
description = "Multi-Agent Market Research and GTM Planning with CrewAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.80.0",
    "python-dotenv>=1.0.0",
    "serpapi>=0.1.5",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.30.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "streamlit>=1.37.0",
]

[project.scripts]
run-crew = "crewai_gtm.main:run"
chatbot = "crewai_gtm.chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_gtm"]
